tree-sitter-bashpp/test/corpus/declarations.txt
==================
Class with inheritance and members
==================

@class Child : Parent {
  @public name="value"
  @private @Object object
  @protected @Object* pointer
}

---

(program
  (class_definition
    (type_identifier)
    (type_identifier)
    (compound_statement
      (data_member_declaration
        (access_modifier)
        (member_name)
        (default_value
          (string
            (string_content))))
      (data_member_declaration
        (access_modifier)
        (object_declaration
          (type_identifier)
          (object_name)))
      (data_member_declaration
        (access_modifier)
        (pointer_declaration
          (type_identifier)
          (object_name))))))

==================
Methods and lifecycle definitions
==================

@class Example {
  @virtual @public @method update value @Object* object {
    printf '%s\n' "$value"
  }

  @constructor {
    echo constructed
  }

  @destructor {
    echo destroyed
  }
}

---

(program
  (class_definition
    (type_identifier)
    (compound_statement
      (method_definition
        (virtual_modifier)
        (access_modifier)
        (method_name)
        (method_parameter
          (parameter_name))
        (method_parameter
          (type_identifier)
          (parameter_name))
        (compound_statement
          (command
            (command_name
              (word))
            (raw_string)
            (string
              (simple_expansion
                (variable_name))))))
      (constructor_definition
        (compound_statement
          (command
            (command_name
              (word))
            (word))))
      (destructor_definition
        (compound_statement
          (command
            (command_name
              (word))
            (word)))))))

==================
Object and pointer declarations
==================

@Object object
@Object second="value"
@Object* pointer
@Object* initialized="address"

---

(program
  (object_declaration
    (type_identifier)
    (object_name))
  (object_declaration
    (type_identifier)
    (object_name)
    (default_value
      (string
        (string_content))))
  (pointer_declaration
    (type_identifier)
    (object_name))
  (pointer_declaration
    (type_identifier)
    (object_name)
    (default_value
      (string
        (string_content)))))

==================
Include statements
==================

@include "local.bpp"
@include_once static <Stack>
@include dynamic <Queue> as "/runtime/Queue.sh"

---

(program
  (include_statement
    (include_path))
  (include_statement
    (include_type)
    (include_path))
  (include_statement
    (include_type)
    (include_path)
    (include_path)))
